app/globals.css
@tailwind base;

:root {
  --primary: rgba(0, 0, 0, 0);
  --secondary: rgb(207, 26, 138);
  /* Your default theme */
  --background: white;
  --foreground: black;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: black;
    --foreground: white;
  }
}

html {
  width: 100%;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

* {
  box-sizing: border-box;
}

/* Custom scrollbar */
/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--secondary) var(--primary);
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 1rem;
}

*::-webkit-scrollbar-track {
  @apply bg-neutral-200 dark:bg-gray-950;
}

*::-webkit-scrollbar-thumb {
  background-color: var(--secondary);
  border-radius: 14px;
  border: 3px solid transparent;
  background-clip: content-box;
}

*::-webkit-scrollbar-thumb:hover {
  background-color: rgb(185, 28, 159);
}

@tailwind components;
@tailwind utilities;

